tests/NormalTests/paczka1/fuzzy1/80800816.err
Error in line 3: OFVg8WFXm A'55 81,1
Error in line 5: iK2NybWs A655 9,6
Error in line 6: xAx A796 72,0
Error in line 25: A796 A655 62,1
Error in line 22: OFVg8WFXm A655 87,3
